--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,14 @@
-extends:
-- 'airbnb-base'
 env:
-node: true
-browser: true
+  es2021: true
+  node: true
+extends: airbnb-base
+parserOptions:
+  ecmaVersion: latest
+  sourceType: module
+rules: 
+  no-console: 0
+  import/extensions:
+    - error
+    - ignorePackages
+    - js: always
+
