--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "[![Actions Status](https://github.com/Moonlin14/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Moonlin14/frontend-project-44/actions)",
-  "main": "index.js",
+  "main": "src/index.js",
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
